# streamlit-fastapi-template

./: LICENSE  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/routers/: auth.py  item.py
backend/app/schemas/: auth.py  item.py
frontend/: Dockerfile  main.py  pyproject.toml
